close issues: fix some bugs

--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
 	<header class="header">
 		<div class="header__container">
 			<div class="header__navbar">
-				<img class="header__logo" src="img/Logo.png" alt="logo" >
+				<img class="header__logo" src="img/logo.png" alt="logo" >
 				<nav class="nav">
 					<ul class="nav__list">
 						<li class="nav__item"><a href="#">Home</a></li>
@@ -50,7 +50,7 @@
 			<img  class="story__image" src="img/symbol.png" alt="story image">
 			<div class="story__content">
 				<h1 class="story__title">
-					OUR STORY
+					our story
 				</h1>
 				<p class="story__inscription">
 				This is Photoshop's version  of Lorem Ipsum.
@@ -72,7 +72,7 @@
 
 <section class="video">
 	<div class="video__container">
-		<a class="video__icon" href="#"></a>
+		<button class="video__icon" ></button>
 		<p class="video__caption">WATCH OUR STORY</p>
 	</div>
 </section>
